Center the previous and next buttons under the species page image box properly in WebKit-based browsers.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1189 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1253,7 +1253,7 @@ a.enlarge:hover {
 	position: relative;
 }
 #taxon .controls span {
-	position: absolute;
+	position: relative;
 	top: -22px;	
 }
 #taxon #main h2 {
