On the species page county distribution maps, get rid of a scrollbar in WebKit-based browsers.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1190 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -184,7 +184,7 @@
                     <object data="/api/maps/{{ taxon.genus|lower }}-{{ specific_epithet }}-distribution-map.svg"
                         type="image/svg+xml" id="dist-county-map"
                         title="distribution map for {{ scientific_name }}"
-                        style="height: 280px">
+                        style="height: 290px; width: 205px">
                     <!--<![endif]-->
                     </object>
                 </div>
