Bugfix: was failing to dismiss old working area before constructing a new one. Symptom was that the second filter you tried setting on a page returned an error because of an "undefined" value, because two triggers ran when you did a single click of the "Apply" button.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1192 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/dojobase.html
+++ b/gobotany/core/templates/dojobase.html
@@ -14,7 +14,9 @@
            parseOnLoad: true,
        };
     </script>
-    <script src="/static/dojo/dojo.js" type="text/javascript"></script>
+    <script type="text/javascript"
+            src="http://ajax.googleapis.com/ajax/libs/dojo/1.6/dojo/dojo.xd.js"
+            ></script>
 
 {% else %}
     <script type="text/javascript">
