--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -106,7 +106,11 @@
                             </li>
                         {% endfor %}
                     {% else %}
-                        <li>N/A</li>
+                        <li>
+                          No “plant preview characters” have been established
+                          for the “{{ pile.friendly_name }}” ({{ pile.name}})
+                          pile.
+                        </li>
                     {% endif %}
                 </ul>
                 <a class="description-control" href="#" 
