Adjusted species padding so rows are less likely to wrap at magnifications.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1222 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -658,7 +658,7 @@ div.show {
     padding-left: 10px;
 }
 .plant-list .row .plant.last {
-    padding-right: 10px;
+    padding-right: 9.5px;  /* was 10px; makes it less likely to wrap */
 }
 
 .plant-list .row .plant.genus1 {
