Added images to the tooltip that comes up when you hover over a glossary term.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1224 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1105,6 +1105,16 @@ div.working-area #simple-slider .count {
     border-bottom: 1px dashed;
     cursor: pointer;
 }
+/* glossary tooltip */
+.glosstip {
+    position: relative;
+    max-width: 30em;
+}
+.glosstip img {
+    position: absolute;
+    bottom: 100%;
+    border: 3px solid black;
+}
 
 /* Help navigation styles */
 #help-nav {
