--- a/gobotany/core/templates/dojobase.html
+++ b/gobotany/core/templates/dojobase.html
@@ -1,22 +1,35 @@
 <!-- start dojobase.html -->
 
 {% if debug_dojo %}
+    <!--
+       BE SURE TO RUN "<buildout>/scripts/dojo-build.sh" BEFORE DEBUGGING!
+      -->
     <script type="text/javascript">
 	djConfig = {
            isDebug: true,
            debugAtAllCosts: true,
            useXDomain: false,
-           baseUrl: 'http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/static/js/',
+           baseUrl: 'http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/static/dojo/',
            modulePaths: {
+               dijit: '/static/dijit',
+               dojo: '/static/dojo',
+               dojox: '/static/dojox',
                gobotany: '/static/gobotany',
                layers: '/static/js/layers'
            },
-           parseOnLoad: true,
+           parseOnLoad: true
        };
     </script>
+    <!-- src="http://ajax.googleapis.com/ajax/libs/dojo/1.6/dojo/dojo.xd.js" -->
     <script type="text/javascript"
-            src="http://ajax.googleapis.com/ajax/libs/dojo/1.6/dojo/dojo.xd.js"
+            src="/static/dojo/dojo.js"
             ></script>
+    <!-- speeds things up immensely, but you cannot debug dojo itself: -->
+    <!--
+       <script type="text/javascript"
+            src="/static/js/layers/sk.js"
+            ></script>
+       -->
 
 {% else %}
     <script type="text/javascript">
@@ -26,7 +39,7 @@
            useXDomain: false,
            baseUrl: 'http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/static/js/',
            modulePaths: {
-             <!-- If you built Dojo using "buildout -N install dojo-build": -->
+             <!-- If you run "<buildout>/scripts/dojo-build.sh" then: -->
                <!-- dijit: '/static/js/dijit', -->
                <!-- dojo: '/static/js/dojo', -->
                <!-- dojox: '/static/js/dojox', -->
