--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -500,15 +500,16 @@ Plant Listing Styles
 }
 
 .img-gallery .frame {
-	width: 150px; /*160px;*/
-	height: 139px;	
-	border: 5px solid rgba(255, 255, 255, 0.8);
-	position: absolute;
-	z-index: 100;
-	top: 0;
-	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
-	-moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
-	-webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
+    border: 5px solid rgba(255, 255, 255, 0.8);
+    cursor: pointer;
+    height: 139px;	
+    position: absolute;
+    top: 0;
+    width: 150px; /*160px;*/
+    z-index: 100;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
+    -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
 }
 
 .img-gallery .images {
