--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -77,7 +77,7 @@
                         <div class="plant-list">
                         </div>
 
-                        <p class="list-all"><a href="#">See a list of all 
+                        <p class="list-all hidden"><a href="#">See a list of all 
                             <span class="species-count">...</span> matching
                             species.</a></p>
 
