Fix bugs I inadvertently introduced: Family and Genus combo box width style failed following naive move out of the HTML; and Chrome threw a JS error because of a new variable I forgot to define (strict mode).
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1250 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -787,7 +787,9 @@ h5.help {
 #plant-id-3 a.get-help-btn {
     margin: 0 0 0 10px;
 }
-#family_select, #genus_select {
+/* These two next items are called family_select and genus_select in the HTML,
+   but Dojo/Dijit transforms them into divs with ids starting with widget_. */
+#widget_family_select, #widget_genus_select {
     width: 140px;
 }
 
