Bugfix: someone rightly removed a leading underscore from a public function, but then failed to change the name where that function was called from inside our HTML.  This might be a strong argument for removing the JS snippets that still remain at this point inside of our HTML template.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1257 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -290,7 +290,7 @@
       API_URL = '{% url api-base %}';
       dojo.require('gobotany.sk.species');
       dojo.addOnLoad(function() {
-          _global_toggleList();
+          global_toggleList();
           gobotany.sk.species.init('{{ scientific_name }}');
       });
       dojo.addOnUnload(function() {
