On the results page, add a way to toggle between the photos view and a thus-far rough list view.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1260 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -78,6 +78,14 @@
                             <div class="clearit"></div>
                         </div><!--Closes .working-area-->
 
+                        <div id="results-tabs">
+                            <ul>
+                                <li><a class="current">Photos</a></li>
+                                <li><a>List</a></li>
+                            </ul>
+                        </div>
+                        <div class="clearit"></div>
+
                         <div class="show hidden">
                             <form id="results-display">
                               <label for="image-type-selector">Show:</label>
@@ -93,8 +101,9 @@
                         <div class="plant-list">
                         </div>
 
-                        <p class="list-all hidden"><a href="#">See a list 
-                            of all <span class="species-count">...</span> 
+                        <p class="list-all hidden"><a>See 
+                            <span class="view-type">a list of</span>
+                            all <span class="species-count">...</span> 
                             matching species.</a></p>
 
                     </div><!--closes #main-->
