--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -717,6 +717,10 @@ p.list-all {
     clear: left;
     padding-top: 2em;
 }
+p.list-all a {
+    cursor: pointer;
+}
+
 /***
 Sidebar Styles for 3rd Level
 ****/
@@ -1033,6 +1037,60 @@ div.working-area .info .hint p {
 
 div.working-area .actions {
     text-align: right;
+}
+
+.show label {
+    vertical-align: middle;
+}
+
+/* Tabs for the different views of results */
+#results-tabs {
+    border-bottom: 1px solid #ddd;
+    height: 24px;
+    margin: 10px 0;
+}
+
+#results-tabs a {
+    background: #d6e6c5;
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eaf2e2), color-stop(100%,#d6e6c5));
+    background: -moz-linear-gradient(center top, #eaf2e2, #d6e6c5);
+    border: 1px solid #ddd;
+    color: #638e3a;
+    cursor: pointer;
+    display: block;
+    float: left;
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    line-height: 14px;
+    margin: 0;
+    padding: 5px 10px 4px;
+    text-align: center;
+    width: 50px;
+    -webkit-border-top-left-radius: 6px;
+    -webkit-border-top-right-radius: 6px;
+    -moz-border-radius-topleft: 6px;
+    -moz-border-radius-topright: 6px;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+}
+#results-tabs a:hover {
+    background: #e1f2cd;
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f0f8e7), color-stop(100%,#e1f2cd));
+    background: -moz-linear-gradient(center top, #f0f8e7, #e1f2cd);
+    cursor: pointer;
+    text-decoration: none;
+}
+#results-tabs li:first-child a {
+    margin-left: 10px;
+}
+#results-tabs li a.current, results-tabs li a.current:hover {
+    background: #fbfaf5;
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#fbfaf5));
+    background: -moz-linear-gradient(center top, #ffffff, #fbfaf5);
+    border-bottom: 0;
+    color: #1a2e11;
+    cursor: default;
+    padding: 5px 10px;
 }
 
 /* Make a Dijit horizontal slider look like a ruler */
