Fix bug where pressing the Clear link at left on the pile/results page would not properly clear a filter if there was more than one filter in effect, and refresh the choice counts when clearing a filter other than the one being displayed in the working area. Restore the gray color to disabled (0-count) choice labels in the working area.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1269 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -831,6 +831,10 @@ h5.help {
     float: left;
     margin: 3px 3px 0 -18px;
 }
+.choices .row div input[disabled='disabled'] + span,
+.choices .row div input[disabled='disabled'] + span + span {
+    color: #aaa;
+}
 .choices .row div img {
     background: #fff;
     border: 1px solid #ddd;
