Fix weirdness in the species page image gallery box due to some too-small images by omitting any images that are at least the size of that box.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1273 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -59,18 +59,23 @@
                     <div class="img-container">
                         <div class="images">
                         {% for i in species_images %}
-                            <div class="single-img">
-                                {% thumbnail i.image "710x249" crop="center" as thumb %}
-                                {% if i.image.height > i.image.width %}
-                                    {% thumbnail i.image "600x800" as full %}                                   {% else %}
-                                    {% thumbnail i.image "800x600" as full %}
-                                {% endif %}
-                                <a href="{{ full }}" rel="shadowbox">
-                                    <img src="{{ thumb }}"
-                                         alt="{{ i.image_type|capfirst }}: 
-                                         {{ scientific_name }}"></a>
-                                <p class="caption">{{ i.image_type|capfirst }}</p>
-                            </div>
+                            {# Skip any images that are too small to #}
+                            {# present in the wide gallery box.      #}
+                            {% if i.image.width >= 710 and i.image.height >= 249 %}
+                                <div class="single-img">
+                                    {% thumbnail i.image "710x249" crop="center" as thumb %}
+                                    {% if i.image.height > i.image.width %}
+                                        {% thumbnail i.image "600x800" as full %}
+                                    {% else %}
+                                        {% thumbnail i.image "800x600" as full %}
+                                    {% endif %}
+                                    <a href="{{ full }}" rel="shadowbox">
+                                        <img src="{{ thumb }}"
+                                             alt="{{ i.image_type|capfirst }}: 
+                                        {{ scientific_name }}"></a>
+                                    <p class="caption">{{ i.image_type|capfirst }}</p>
+                                </div>
+                            {% endif %}
                         {% endfor %}
                         </div>
                     </div>
