--- a/gobotany/simplekey/templates/simplekey/_base.html
+++ b/gobotany/simplekey/templates/simplekey/_base.html
@@ -27,6 +27,8 @@
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
+        <!--underscore.js-->
+        <script src="/static/underscore-min.js"></script>
         <!--JQuery-->
         <script src="/static/jquery-1.6.min.js"></script>
         <!--Global JS File-->
