Reorganized the Getting Started JS code mostly to test whether it will now load without a parse error in IE8.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1278 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -273,10 +273,10 @@ Getting Started
 
 {% block js_bottom %}
     <script>
-        dojo.require('gobotany.sk.help_start');
-
+        dojo.require('gobotany.sk.GettingStartedHelper');
         dojo.addOnLoad(function() {
-            gobotany.sk.help_start.init();
+            var getting_started_helper = gobotany.sk.GettingStartedHelper();
+            getting_started_helper.setup();
         });
     </script>
 {% endblock %}
