Fix CSS class name typo that jumped out while scanning some file-search results.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1292 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -478,7 +478,7 @@ ul#plant-listing {
     border-left-color: #c5e8ff;
 }
 
-#plant-listing li.PlantScollPage {
+#plant-listing li.PlantScrollPage {
     margin: 0;
     text-align: center;
 }
