Tweak test page for IE debugging.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1302 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_test.html
+++ b/gobotany/simplekey/templates/simplekey/help_test.html
@@ -273,10 +273,11 @@ Test
 
 {% block js_bottom %}
     <script>
-        dojo.require('gobotany.sk.GettingStartedHelper');
-        dojo.addOnLoad(function() {
-            var getting_started_helper = gobotany.sk.GettingStartedHelper();
-            getting_started_helper.setup();
-        });
+        //dojo.require('gobotany.sk.GettingStartedHelper');
+        //dojo.addOnLoad(function() {
+        //    var getting_started_helper = gobotany.sk.GettingStartedHelper();
+        //    getting_started_helper.setup();
+        //});
     </script>
+    <script src="/static/gobotany/sk/GettingStartedHelper.js"></script>
 {% endblock %}
