Make the test page not use dojo.require to load the offending JS code.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1303 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_test.html
+++ b/gobotany/simplekey/templates/simplekey/help_test.html
@@ -279,5 +279,10 @@ Test
         //    getting_started_helper.setup();
         //});
     </script>
+    <!-- Try loading without dojo.require() -->
     <script src="/static/gobotany/sk/GettingStartedHelper.js"></script>
+    <script>
+        var getting_started_helper = gobotany.sk.GettingStartedHelper();
+        getting_started_helper.setup();
+    </script>
 {% endblock %}
