--- a/gobotany/simplekey/templates/simplekey/_test_base.html
+++ b/gobotany/simplekey/templates/simplekey/_test_base.html
@@ -29,31 +29,24 @@
         <![endif]-->
 
         <!--underscore.js-->
-        <!--script src="/static/underscore-min.js"></script-->
+        <script src="/static/underscore-min.js"></script>
         <!--JQuery-->
-        <!--script src="/static/jquery-1.6.min.js"></script-->
+        <script src="/static/jquery-1.6.min.js"></script>
         <!--Global JS File-->
-        <!--script type="text/javascript" src="/static/scripts/global.js"></script-->
-        <script>
-            // Dummy code in place while the global JS is commented out
-            function global_toggleQuestions() {
-                return;
-            }
-        </script>        
-        <!--Shadowbox-->
-        <!--script type="text/javascript" src="/static/scripts/shadowbox.js"></script-->
-        <!--script type="text/javascript">
+        <script type="text/javascript" src="/static/scripts/global.js"></script>                <!--Shadowbox-->
+        <script type="text/javascript" src="/static/scripts/shadowbox.js"></script>
+        <script type="text/javascript">
             Shadowbox.init();
-        </script-->
+        </script>
         <!--Image Gallery Slider-->
-        <!--script type="text/javascript"
-            src="/static/jquery.tools.min.js"></script-->
-        <!--script type="text/javascript">
+        <script type="text/javascript"
+            src="/static/jquery.tools.min.js"></script>
+        <script type="text/javascript">
             $(function() {
                 //Start
                 $('.img-container').scrollable();
             });
-        </script-->
+        </script>
 
     </head>
 
