To fix the IE8 JS problem on the Getting Started page, load that JS code without using dojo.require(). Make the same change on the test page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1304 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -272,11 +272,11 @@ Getting Started
 {% endblock %}
 
 {% block js_bottom %}
+    <!-- Load this code without using dojo.require(). This seems to get
+         around mysterious errors that occur here in IE8. -->
+    <script src="/static/gobotany/sk/GettingStartedHelper.js"></script>
     <script>
-        dojo.require('gobotany.sk.GettingStartedHelper');
-        dojo.addOnLoad(function() {
-            var getting_started_helper = gobotany.sk.GettingStartedHelper();
-            getting_started_helper.setup();
-        });
+        var getting_started_helper = gobotany.sk.GettingStartedHelper();
+        getting_started_helper.setup();
     </script>
 {% endblock %}
